--- a/NoticeBoard/app/src/main/AndroidManifest.xml
+++ b/NoticeBoard/app/src/main/AndroidManifest.xml
@@ -9,20 +9,20 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".FindPasswordActivity">
-        </activity>
-        <activity android:name=".FindIDActivity">
-        </activity>
-        <activity android:name=".FindAccountActivity">
-        </activity>
-        <activity android:name=".FailAuthenticateActivity">
-        </activity>
-        <activity android:name=".DetailPostActivity">
-        </activity>
-        <activity android:name=".PostingActivity">
-        </activity>
-        <activity android:name=".CreateAccountActivity">
-        </activity>
+        <!--<activity android:name=".FindPasswordActivity">-->
+        <!--</activity>-->
+        <!--<activity android:name=".FindIDActivity">-->
+        <!--</activity>-->
+        <!--<activity android:name=".FindAccountActivity">-->
+        <!--</activity>-->
+        <!--<activity android:name=".FailAuthenticateActivity">-->
+        <!--</activity>-->
+        <!--<activity android:name=".DetailPostActivity">-->
+        <!--</activity>-->
+        <!--<activity android:name=".PostingActivity">-->
+        <!--</activity>-->
+        <!--<activity android:name=".CreateAccountActivity">-->
+        <!--</activity>-->
         <activity
                 android:name=".MainActivity"
                 android:label="@string/title_activity_login">
@@ -32,10 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity">
-        </activity>
-        <activity android:name=".LoginActivity">
-        </activity>
+        <!--<activity android:name=".SplashActivity">-->
+        <!--</activity>-->
+        <!--<activity android:name=".LoginActivity">-->
+        <!--</activity>-->
     </application>
 
 </manifest>
